Refactor AI move selection to use getFirst() for improved readability